--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,1 +1,8 @@
-body{font-size:18px;line-height:1.8}
+body {
+  font-size: 18px;
+  line-height: 1.8; }
+
+.pageTitle {
+  font-size: 28px;
+  padding: 10px;
+  letter-spacing: 1px; }
