--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
+
 body {
 font-size: 18px;
+font-family: 'Noto Sans JP', sans-serif;
 line-height: 1.8; 
 }
 
